[gd_scene load_steps=8 format=3 uid="uid://cyc841wfb48xn"]

[ext_resource type="Script" path="res://DMovement.gd" id="1_g34sx"]
[ext_resource type="Material" uid="uid://u1fm81ih6av4" path="res://Assets/Sprites/Playercharacter/flashmaterial.tres" id="2_4x2vb"]
[ext_resource type="Texture2D" uid="uid://dlf286bbm53ah" path="res://Assets/Sprites/Enemies/Mousepants.png" id="2_k2547"]
[ext_resource type="AudioStream" uid="uid://bqy0hd2mf56rn" path="res://Assets/audio/sound effects/dash.mp3" id="3_ui3ni"]
[ext_resource type="AudioStream" uid="uid://dbhe7jbgulshq" path="res://Assets/audio/sound effects/death.mp3" id="4_udpii"]
[ext_resource type="AudioStream" uid="uid://xy5m6egybai2" path="res://Assets/audio/sound effects/walking.mp3" id="5_4xfvd"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_d2v5i"]
radius = 55.0
height = 160.0

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_g34sx")
speed = 750
accel = 300
decel = 300
jumpPow = 2000
gravMult = 5
dashSpeed = 5000

[node name="Sprite2D" type="Sprite2D" parent="."]
material = ExtResource("2_4x2vb")
use_parent_material = true
texture = ExtResource("2_k2547")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_d2v5i")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.5, 0.5)

[node name="CoyoteTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.15
one_shot = true

[node name="DashCooldown" type="Timer" parent="."]
process_callback = 0
one_shot = true

[node name="FlashTime" type="Timer" parent="."]
process_callback = 0
wait_time = 0.005
one_shot = true

[node name="Sounds" type="Node" parent="."]

[node name="Dash" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("3_ui3ni")
volume_db = -25.0

[node name="Death" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("4_udpii")
volume_db = -25.0

[node name="Walking" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("5_4xfvd")
volume_db = -25.0
parameters/looping = true

[connection signal="timeout" from="CoyoteTime" to="." method="_on_coyote_time_timeout"]
[connection signal="timeout" from="DashCooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="timeout" from="FlashTime" to="." method="_on_flash_time_timeout"]
